fix(ui/Alert): align

--- a/packages/ui/components/Alert/index.styl
+++ b/packages/ui/components/Alert/index.styl
@@ -1,6 +1,6 @@
 .root
   radius()
-  padding 1u 2u
+  padding 1u
   border-color: $UI.colors.primary
   border-width 1px
   background-color: $UI.colors.primaryLightest
@@ -18,6 +18,7 @@
     background-color: $UI.colors.successLightest
 
 .icon
+  padding 2px
   color: $UI.colors.primary
   flex-shrink 0
 
@@ -33,6 +34,9 @@
 .actions
   flex-shrink 0
   margin-left 2u
+
+.message
+  padding 2px
 
 .content
   flex-shrink 1
